[package]
name = "culit"
version = "0.6.0"
edition = "2021"
description = "Custom literals"
rust-version = "1.79"
authors = ["Nik Revenco <pm@nikrev.com>"]
repository = "https://github.com/nik-rev/culit"
keywords = ["custom", "literal", "proc-macro", "math", "science"]
categories = ["science", "rust-patterns", "development-tools", "mathematics", "embedded"]
license = "MIT OR Apache-2.0"

[dependencies]
# std doesn't provide us a way to get contents of a `proc_macro::Literal`
litrs = "0.5"

[dev-dependencies]
trybuild = "1.0"

[lib]
proc-macro = true
